<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.inno-orders.innosol</groupId>
	<artifactId>inno-orders</artifactId>
	<version>0.0.1</version>
	<modules>
		<module>inno-orders-data</module>
		<module>inno-orders-web</module>
	</modules>
	<packaging>pom</packaging>

	<name>inno-orders</name>
	<description>Company project for ordering, storing, and retrieving orders from clients</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.1.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<!--Include JaxB as removed in Java11 but required by hibernate-->
		<jaxb.version>2.3.0</jaxb.version>
		<!--@compiler: sources in java version-->
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
			<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
			<maven.compiler.target>1.8</maven.compiler.target>
			<maven.compiler.source>1.8</maven.compiler.source>

			<appengine.app.version>1</appengine.app.version>
			<appengine.target.version>1.9.71</appengine.target.version>
			<appengine-maven-plugin-version>1.3.2</appengine-maven-plugin-version>
	</properties>

<dependencies>
	<dependency>
		<groupId>javax.xml.bind</groupId>
		<artifactId>jaxb-api</artifactId>
		<version>${jaxb.version}</version>
	</dependency>
	<dependency>
		<groupId>com.sun.xml.bind</groupId>
		<artifactId>jaxb-core</artifactId>
		<version>${jaxb.version}</version>
	</dependency>
	<dependency>
		<groupId>com.sun.xml.bind</groupId>
		<artifactId>jaxb-impl</artifactId>
		<version>${jaxb.version}</version>
	</dependency>
	<dependency>
		<groupId>com.google.appengine</groupId>
		<artifactId>appengine-api-1.0-sdk</artifactId>
		<version>${appengine.target.version}</version>
	</dependency>
	<dependency>
		<groupId>com.google.appengine</groupId>
		<artifactId>appengine-testing</artifactId>
		<version>${appengine.target.version}</version>
		<scope>test</scope>
	</dependency>
	<dependency>
		<groupId>com.google.appengine</groupId>
		<artifactId>appengine-api-stubs</artifactId>
		<version>${appengine.target.version}</version>
		<scope>test</scope>
	</dependency>
</dependencies>
	<build>
		<outputDirectory>target/${project.artifactId}/WEB-INF/classes</outputDirectory>
		<plugins>
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>appengine-maven-plugin</artifactId>
				<version>${appengine-maven-plugin-version}</version>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <goals>install</goals>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                </configuration>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

    <scm>
        <developerConnection>scm:git:git@github.com:sleethma/inno-orders.git</developerConnection>
  </scm>
</project>
